add font search

--- a/popup.html
+++ b/popup.html
@@ -111,6 +111,7 @@ label {
      <div class="fonts-header">Your Favorites:</div>
      <div id="fonts-starred"></div>
      <div class="fonts-header">Browse All:</div>
+     <input type="text" id="fonts-search">
      <div id="fonts-all">
       <div id="nofont" style="display: none;">
         <input type="radio" name="fontFamily" checked value="" style="display:none">
