Fix subset dropdown

--- a/popup.html
+++ b/popup.html
@@ -98,7 +98,7 @@ label {
 
     <div id="fonts">
       <p>
-        <label>Filter:<br>
+        <label>Subset:<br>
           <select id="fonts-subset">
             <option value="cyrillic">Cyrillic</option>
             <option value="cyrillic-ext">Cyrillic Ext</option>
