--- a/popup.html
+++ b/popup.html
@@ -100,6 +100,7 @@ label {
       <p>
         <label>Subset:<br>
           <select id="fonts-subset">
+            <option value="all">All</option>
             <option value="cyrillic">Cyrillic</option>
             <option value="cyrillic-ext">Cyrillic Ext</option>
             <option value="greek">Greek</option>
